Varios cambios multiples

--- a/main/degree.html
+++ b/main/degree.html
@@ -8,15 +8,15 @@
     </ul>
   </div>
   <header class="header">
-    <a href="../../index.html" class="logo">Adrian David Website</a>
+    <a href="../../index.html" class="logo">Georgios Website</a>
     <nav class="navbar">
         <a href="../../index.html">Home</a>
         <a href="../about.html">About</a>
         <a href="../degree.html" class="active">Degree</a>
         <a href="../Info/topic.html">Topic</a>
         <a href="../contact.html">Contact</a>
-        <a href="../cv.html">C.V</a>
-        <a href="../fundamentals.html">F.C</a>
+        <a href="../cv.html">Curriculum</a>
+        <a href="../fundamentals.html">Fundamentals</a>
         <a href="../net.html">Net</a>
     </nav>
 </header>
