--- a/main/contact.html
+++ b/main/contact.html
@@ -15,8 +15,8 @@
             <a href="../degree.html" class="active">Degree</a>
             <a href="../Info/topic.html">Topic</a>
             <a href="../contact.html">Contact</a>
-            <a href="../cv.html">C.V</a>
-            <a href="../fundamentals.html">F.C</a>
+            <a href="../cv.html">Curriculum</a>
+            <a href="../fundamentals.html">Fundamentals</a>
             <a href="../net.html">Net</a>
         </nav>
     </header>
