--- a/main/cursos/2do año.html
+++ b/main/cursos/2do año.html
@@ -14,8 +14,8 @@
             <a href="../degree.html" class="active">Degree</a>
             <a href="../topic.html">Topic</a>
             <a href="../contact.html">Contact</a>
-            <a href="../curriculum.html">curriculum</a>
-            <a href="../fundamentals.html">fundamentals</a>
+            <a href="../curriculum.html">Curriculum</a>
+            <a href="../fundamentals.html">Fundamentals</a>
             <a href="../net.html">Net</a>
         </nav>
     </header>
