--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <a href="public/degree.html">Degree</a>
       <a href="public/Info/topic.html">Topic</a>
       <a href="public/contact.html">Contact</a>
-      <a href="public/cv.html">C.V</a>
-      <a href="public/fundamentals.html">F.C</a>
+      <a href="public/cv.html">Curriculum</a>
+      <a href="public/fundamentals.html">Fundamentals</a>
       <a href="public/net.html">Net</a>
     </nav>
   </header>
