--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>Home</title>
   <link rel="stylesheet" href="Css/style.css">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 <body>
   <header class="index.html">
-    <a href="index.html" class="logo"></a>
+    <a href="index.html" class="logo">My Website</a>
     <nav class="navbar">
       <a href="index.html" class="active">Home</a>
       <a href="public/about.html">About</a>
@@ -27,7 +27,7 @@
       <h1>Welcome to My Web Page</h1>
       <h3>Hope you like it!</h3>
       <div class="btn-box">
-        <a href="public/contact.html">Let's talk</a>
+        <a href="public/contact.html" class="btn">Let's talk</a>
       </div>
     </div>
 
