--- a/main/contact.html
+++ b/main/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
     <header class="contact.html">
@@ -12,9 +12,9 @@
         <nav class="navbar">
             <a href="../../index.html">Home</a>
             <a href="../about.html">About</a>
-            <a href="../degree.html" class="active">Degree</a>
+            <a href="../degree.html">Degree</a>
             <a href="../Info/topic.html">Topic</a>
-            <a href="../contact.html">Contact</a>
+            <a href="../contact.html" class="active">Contact</a>
             <a href="../cv.html">Curriculum</a>
             <a href="../fundamentals.html">Fundamentals</a>
             <a href="../net.html">Net</a>
@@ -22,7 +22,7 @@
     </header>
 
     <section class="contact-form">
-        <h2>Contact Us</h2>
+        <h2>Contact Me</h2>
         <form action="mailto:9400406@alumnos.ufv.es" method="post" enctype="text/plain">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
