cambios al path d econtact

--- a/main/contact.html
+++ b/main/contact.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <header class="contact.html">
-        <a href="../../index.html" class="logo">Georgios Website</a>
+        <a href="../index.html" class="logo">Georgios Website</a>
         <nav class="navbar">
-            <a href="../../index.html">Home</a>
-            <a href="../about.html">About</a>
-            <a href="../degree.html">Degree</a>
-            <a href="../Info/topic.html">Topic</a>
-            <a href="../contact.html" class="active">Contact</a>
-            <a href="../cv.html">Curriculum</a>
-            <a href="../fundamentals.html">Fundamentals</a>
-            <a href="../net.html">Net</a>
+            <a href="../index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="degree.html">Degree</a>
+            <a href="Info/topic.html">Topic</a>
+            <a href="contact.html" class="active">Contact</a>
+            <a href="cv.html">Curriculum</a>
+            <a href="fundamentals.html">Fundamentals</a>
+            <a href="net.html">Net</a>
         </nav>
     </header>
 
