--- a/main/contact.html
+++ b/main/contact.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="../css/style.css">
     <style>
         .contact-form {
             max-width: 600px;
@@ -50,9 +49,9 @@
     </style>
 </head>
 <body>
-    <header class="contact.html">
+    <header>
         <a href="../index.html" class="logo">Georgios Website</a>
-        <nav class="navbar">
+        <nav>
             <a href="../index.html">Home</a>
             <a href="about.html">About</a>
             <a href="degree.html">Degree</a>
@@ -66,7 +65,7 @@
 
     <section class="contact-form">
         <h2>Contact Me</h2>
-        <form action="mailto:9400406@alumnos.ufv.es" method="post" enctype="text/plain">
+        <form action="mailto:9400406@alumnos.ufv.es" method="get" enctype="text/plain">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             
