--- a/main/contact.html
+++ b/main/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="../css/style.css">
     <style>
         .contact-form {
             max-width: 600px;
@@ -65,7 +66,7 @@
 
     <section class="contact-form">
         <h2>Contact Me</h2>
-        <form action="mailto:9400406@alumnos.ufv.es" method="get" enctype="text/plain">
+        <form action="mailto:9400406@alumnos.ufv.es" method="post" enctype="text/plain">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             
