--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 </head>
 <body>
   <header class="index.html">
-    <a href="index.html" class="logo">My Website</a>
+    <a href="../index.html" class="logo">Georgios Website</a>
     <nav class="navbar">
-      <a href="index.html" class="active">Home</a>
-      <a href="public/about.html">About</a>
-      <a href="public/degree.html">Degree</a>
-      <a href="public/Info/topic.html">Topic</a>
-      <a href="public/contact.html">Contact</a>
-      <a href="public/cv.html">Curriculum</a>
-      <a href="public/fundamentals.html">Fundamentals</a>
-      <a href="public/net.html">Net</a>
+        <a href="../index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="degree.html">Degree</a>
+        <a href="Info/topic.html">Topic</a>
+        <a href="contact.html" class="active">Contact</a>
+        <a href="cv.html">Curriculum</a>
+        <a href="fundamentals.html">Fundamentals</a>
+        <a href="net.html">Net</a>
     </nav>
-  </header>
+</header>
 
   <section class="home">
     <div class="home-content">
       <h1>Welcome to My Web Page</h1>
       <h3>Hope you like it!</h3>
       <div class="btn-box">
-        <a href="public/contact.html" class="btn">Let's talk</a>
+        <a href="contact.html" class="btn">Let's talk</a>
       </div>
     </div>
     <div class="home-sci">
@@ -42,9 +42,9 @@
     <p>Topic description goes here.</p>
     <h3>Related Links</h3>
     <ul>
-      <li><a href="public/Info/overview.html">Overview</a></li>
-      <li><a href="public/Info/issues.html">Issues</a></li>
-      <li><a href="public/Info/controversy.html">Controversy</a></li>
+      <li><a href="overview.html">Overview</a></li>
+      <li><a href="issues.html">Issues</a></li>
+      <li><a href="controversy.html">Controversy</a></li>
     </ul>
   </div>
 
