--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Contact</title>
+  <link rel="stylesheet" href="../css/style.css">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 <body>
@@ -48,6 +48,7 @@
     </ul>
   </div>
 
+  <section class="contact-form">
     <h2>Contact Me</h2>
     <form action="mailto:9400406@alumnos.ufv.es" method="post" enctype="text/plain">
       <label for="name">Name:</label>
