--- a/main/contact.html
+++ b/main/contact.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <section class="contact-form">
+    <div class="contact-form">
         <h2>Contact Me</h2>
         <form action="mailto:9400406@alumnos.ufv.es" method="post" enctype="text/plain">
             <label for="name">Name:</label>
@@ -38,6 +38,6 @@
             
             <input type="submit" value="Send">
         </form>
-    </section>
+    </div>
 </body>
 </html>
