--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="main/degree.html">Degree</a>
       <a href="main/Info/topic.html">Topic</a>
       <a href="main/contact.html">Contact</a>
-      <a href="main/cv.html">Curriculum</a>
+      <a href="main/curriculum.html">Curriculum</a>
       <a href="main/fundamentals.html">Fundamentals</a>
       <a href="main/net.html">Net</a>
     </nav>
