--- a/main/net.html
+++ b/main/net.html
@@ -1,13 +1,36 @@
-<header class="header">
-    <a href="../../index.html" class="logo">Georgios Website</a>
-    <nav class="navbar">
-        <a href="../../index.html">Home</a>
-        <a href="../about.html">About</a>
-        <a href="../degree.html" class="active">Degree</a>
-        <a href="../Info/topic.html">Topic</a>
-        <a href="../contact.html">Contact</a>
-        <a href="../cv.html">Curriculum</a>
-        <a href="../fundamentals.html">Fundamentals</a>
-        <a href="../net.html">Net</a>
-    </nav>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Net</title>
+    <link rel="stylesheet" href="../css/style.css">
+</head>
+<body>
+    <header class="header">
+        <a href="../../index.html" class="logo">Georgios Website</a>
+        <nav class="navbar">
+            <a href="../../index.html">Home</a>
+            <a href="../about.html">About</a>
+            <a href="../degree.html">Degree</a>
+            <a href="../Info/topic.html">Topic</a>
+            <a href="../contact.html">Contact</a>
+            <a href="../cv.html">Curriculum</a>
+            <a href="../fundamentals.html">Fundamentals</a>
+            <a href="../net.html" class="active">Net</a>
+        </nav>
+    </header>
+
+    <section class="net-links">
+        <h2>Network</h2>
+        <p>Here are some links to the websites of 5 different people:</p>
+        <ul>
+            <li><a href="https://jaimedpdqufv.github.io/web1/" target="_blank">Jaime</a></li>
+            <li><a href="https://manuelcpedrero.github.io/PaginawebFundamentos/" target="_blank">Manuel</a></li>
+            <li><a href="https://oliviarb12.github.io/trabajo_html_fundamentos-/" target="_blank">Olivia</a></li>
+            <li><a href="https://rodrigo-dfl.github.io/Proyecto-Web-Fundamentos/" target="_blank">Rodrigo</a></li>
+            <li><a href="https://9404548.github.io/trabajoIndividual_2024/" target="_blank">Luis</a></li>
+        </ul>
+    </section>
+</body>
+</html>
