--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
   <section class="home">
     <div class="home-content">
-      <h1>Welcome to My Web Page</h1>
-      <h3>Hope you like it!</h3>
+      <h1>Welcome to my first website, i hope you enjoy it</h1>
+      <h3>Disclaimer: I know it looks kinda terrible but hey, its completely functional!</h3>
       <div class="btn-box">
         <a href="main/contact.html" class="btn">Let's talk</a>
       </div>
