--- a/main/net.html
+++ b/main/net.html
@@ -11,13 +11,13 @@
         <a href="../index.html" class="logo">Georgios Website</a>
         <nav class="navbar">
             <a href="../index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="degree.html">Degree</a>
-            <a href="Info/topic.html">Topic</a>
-            <a href="contact.html">Contact</a>
-            <a href="curriculum.html">Curriculum</a>
-            <a href="fundamentals.html">Fundamentals</a>
-            <a href="net.html" class="active">Net</a>
+            <a href="../about.html">About</a>
+            <a href="../degree.html">Degree</a>
+            <a href="../Info/topic.html">Topic</a>
+            <a href="../contact.html">Contact</a>
+            <a href="../curriculum.html">Curriculum</a>
+            <a href="../fundamentals.html">Fundamentals</a>
+            <a href="../net.html" class="active">Net</a>
         </nav>
     </header>
 
