--- a/main/fundamentals.html
+++ b/main/fundamentals.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <header>
-        <a href="../../index.html" class="logo">Georgios Website</a>
+        <a href="../index.html" class="logo">Georgios Website</a>
         <nav class="navbar">
             <a href="../index.html">Home</a>
-            <a href="../about.html">About</a>
-            <a href="../degree.html">Degree</a>
-            <a href="../Info/topic.html">Topic</a>
-            <a href="../contact.html">Contact</a>
-            <a href="../curriculum.html">Curriculum</a>
-            <a href="../fundamentals.html">Fundamentals</a>
-            <a href="../net.html" class="active">Net</a>
+            <a href="about.html">About</a>
+            <a href="degree.html">Degree</a>
+            <a href="Info/topic.html">Topic</a>
+            <a href="contact.html">Contact</a>
+            <a href="curriculum.html">Curriculum</a>
+            <a href="fundamentals.html" class="active">Fundamentals</a>
+            <a href="net.html">Net</a>
         </nav>
     </header>
 
