--- a/main/fundamentals.html
+++ b/main/fundamentals.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <a href="../index.html" class="logo">Georgios Website</a>
+        <a href="index.html" class="logo">Georgios Website</a>
         <nav class="navbar">
-            <a href="../index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="main/about.html">About</a>
             <a href="main/degree.html">Degree</a>
             <a href="main/Info/topic.html">Topic</a>
