--- a/main/fundamentals.html
+++ b/main/fundamentals.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <section class="fundamentals-info">
+    <section class="fundamentals">
         <h2>Fundamentals of Software Engineering</h2>
         <p>Software engineering is a systematic approach to the design, development, testing, and maintenance of software. It applies engineering principles to software creation to ensure that it is reliable, efficient, and meets user requirements. Here are some key fundamentals of software engineering:</p>
         
