--- a/main/topic.html
+++ b/main/topic.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <section class="topic-info">
+    <section class="topic">
         <h2>League of Legends Esports</h2>
         <p>As a huge fan of League of Legends, I am always excited to talk about its vibrant esports scene. League of Legends (LoL) is a multiplayer online battle arena (MOBA) game developed and published by Riot Games. Since its release in 2009, it has grown to become one of the most popular and competitive esports titles in the world.</p>
         
