--- a/main/degree.html
+++ b/main/degree.html
@@ -1,22 +1,39 @@
-<div class="degree-links">
-    <h3>Academic years</h3>
-    <ul>
-      <li><a href="./cursos/1er año.html">Year 1</a></li>
-      <li><a href="./cursos/2do año.html">Year 2</a></li>
-      <li><a href="./cursos/3er año.html">Year 3</a></li>
-      <li><a href="./cursos/4to año.html">Year 4</a></li>
-    </ul>
-  </div>
-  <header class="header">
-    <a href="../../index.html" class="logo">Georgios Website</a>
-    <nav class="navbar">
-      <a href="../index.html">Home</a>
-      <a href="../about.html">About</a>
-      <a href="../degree.html">Degree</a>
-      <a href="../Info/topic.html">Topic</a>
-      <a href="../contact.html">Contact</a>
-      <a href="../curriculum.html">Curriculum</a>
-      <a href="../fundamentals.html">Fundamentals</a>
-      <a href="../net.html" class="active">Net</a>
-    </nav>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Degree</title>
+    <link rel="stylesheet" href="../css/style.css">
+</head>
+<body>
+    <header class="header">
+        <a href="../index.html" class="logo">Georgios Website</a>
+        <nav class="navbar">
+            <a href="../index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="degree.html" class="active">Degree</a>
+            <a href="Info/topic.html">Topic</a>
+            <a href="contact.html">Contact</a>
+            <a href="curriculum.html">Curriculum</a>
+            <a href="fundamentals.html">Fundamentals</a>
+            <a href="net.html">Net</a>
+        </nav>
+    </header>
+
+    <section class="degree-info">
+        <h2>Software Engineering Degree</h2>
+        <p>The Software Engineering degree program is designed to provide students with a strong foundation in computer science and software development. The program covers a wide range of topics, including programming, algorithms, data structures, software design, and project management. Students will gain hands-on experience through practical projects and internships, preparing them for successful careers in the software industry.</p>
+        
+        <div class="degree-links">
+            <h3>Academic Years</h3>
+            <ul>
+                <li><a href="./cursos/1er año.html">Year 1</a></li>
+                <li><a href="./cursos/2do año.html">Year 2</a></li>
+                <li><a href="./cursos/3er año.html">Year 3</a></li>
+                <li><a href="./cursos/4to año.html">Year 4</a></li>
+            </ul>
+        </div>
+    </section>
+</body>
+</html>
