--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html" class="active">Home</a>
         <a href="main/about.html">About</a>
         <a href="main/degree.html">Degree</a>
-        <a href="main/Info/topic.html">Topic</a>
+        <a href="main/topic.html">Topic</a>
         <a href="main/contact.html">Contact</a>
         <a href="main/curriculum.html">Curriculum</a>
         <a href="main/fundamentals.html">Fundamentals</a>
