--- a/main/about.html
+++ b/main/about.html
@@ -13,7 +13,7 @@
       <a href="../index.html">Home</a>
       <a href="about.html" class="active">About</a>
       <a href="degree.html">Degree</a>
-      <a href="Info/topic.html">Topic</a>
+      <a href="topic.html">Topic</a>
       <a href="contact.html">Contact</a>
       <a href="curriculum.html">Curriculum</a>
       <a href="fundamentals.html">Fundamentals</a>
