--- a/main/fundamentals.html
+++ b/main/fundamentals.html
@@ -13,7 +13,7 @@
             <a href="index.html">Home</a>
             <a href="main/about.html">About</a>
             <a href="main/degree.html">Degree</a>
-            <a href="main/Info/topic.html">Topic</a>
+            <a href="main/topic.html">Topic</a>
             <a href="main/contact.html">Contact</a>
             <a href="main/curriculum.html">Curriculum</a>
             <a href="main/fundamentals.html">Fundamentals</a>
