--- a/main/about.html
+++ b/main/about.html
@@ -10,16 +10,16 @@
   <header class="header">
     <a href="../index.html" class="logo">Georgios Website</a>
     <nav class="navbar">
-      <a href="../index.html">Home</a>
-      <a href="about.html" class="active">About</a>
-      <a href="degree.html">Degree</a>
-      <a href="topic.html">Topic</a>
-      <a href="contact.html">Contact</a>
-      <a href="curriculum.html">Curriculum</a>
-      <a href="fundamentals.html">Fundamentals</a>
-      <a href="net.html">Net</a>
+        <a href="../index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="degree.html" class="active">Degree</a>
+        <a href="/topic.html">Topic</a>
+        <a href="contact.html">Contact</a>
+        <a href="curriculum.html">Curriculum</a>
+        <a href="fundamentals.html">Fundamentals</a>
+        <a href="net.html">Net</a>
     </nav>
-  </header>
+</header>
 
   <section class="about">
     <h2>About Me</h2>
