--- a/main/cursos/3er año.html
+++ b/main/cursos/3er año.html
@@ -8,17 +8,17 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <header>
-        <a href="../../index.html" class="logo">Georgios Website</a>
+    <header class="header">
+        <a href="../index.html" class="logo">Georgios Website</a>
         <nav class="navbar">
-            <a href="../../index.html">Home</a>
-            <a href="../about.html">About</a>
-            <a href="../degree.html" class="active">Degree</a>
-            <a href="../topic.html">Topic</a>
-            <a href="../contact.html">Contact</a>
-            <a href="../curriculum.html">Curriculum</a>
-            <a href="../fundamentals.html">Fundamentals</a>
-            <a href="../net.html">Net</a>
+            <a href="../index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="degree.html" class="active">Degree</a>
+            <a href="/topic.html">Topic</a>
+            <a href="contact.html">Contact</a>
+            <a href="curriculum.html">Curriculum</a>
+            <a href="fundamentals.html">Fundamentals</a>
+            <a href="net.html">Net</a>
         </nav>
     </header>
     
