--- a/main/topic.html
+++ b/main/topic.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="../index.html" class="logo">Georgios Website</a>
         <nav class="navbar">
             <a href="../index.html">Home</a>
-            <a href="../main/about.html">About</a>
-            <a href="../main/degree.html">Degree</a>
-            <a href="../main/topic.html" class="active">Topic</a>
-            <a href="../main/contact.html">Contact</a>
-            <a href="../main/curriculum.html">Curriculum</a>
-            <a href="../main/fundamentals.html">Fundamentals</a>
-            <a href="../main/net.html">Net</a>
+            <a href="about.html">About</a>
+            <a href="degree.html" class="active">Degree</a>
+            <a href="/topic.html">Topic</a>
+            <a href="contact.html">Contact</a>
+            <a href="curriculum.html">Curriculum</a>
+            <a href="fundamentals.html">Fundamentals</a>
+            <a href="net.html">Net</a>
         </nav>
     </header>
 
