--- a/main/contact.html
+++ b/main/contact.html
@@ -15,7 +15,7 @@
             <a href="main/degree.html">Degree</a>
             <a href="main/topic.html">Topic</a>
             <a href="main/contact.html">Contact</a>
-            <a href="main/curriculum.html">Curriculum</a>
+            <a href="curriculum.html">Curriculum</a>
             <a href="main/fundamentals.html">Fundamentals</a>
             <a href="main/net.html">Net</a>
         </nav>
