--- a/main/contact.html
+++ b/main/contact.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="stylesheet" href="../css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="header">
-        <a href="../index.html" class="logo">Georgios Website</a>
-        <nav class="navbar">
-            <a href="index.html" class="active">Home</a>
-            <a href="main/about.html">About</a>
-            <a href="main/degree.html">Degree</a>
-            <a href="main/topic.html">Topic</a>
-            <a href="main/contact.html">Contact</a>
-            <a href="curriculum.html">Curriculum</a>
-            <a href="main/fundamentals.html">Fundamentals</a>
-            <a href="main/net.html">Net</a>
-        </nav>
-    </header>
+  <header class="header">
+    <a href="../index.html" class="logo">Georgios Website</a>
+    <nav class="navbar">
+        <a href="../index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="degree.html" class="active">Degree</a>
+        <a href="/topic.html">Topic</a>
+        <a href="contact.html">Contact</a>
+        <a href="curriculum.html">Curriculum</a>
+        <a href="fundamentals.html">Fundamentals</a>
+        <a href="net.html">Net</a>
+    </nav>
+</header>
 
     <div class="contact-form">
         <h2>Contact Me</h2>
