--- a/main/curriculum.html
+++ b/main/curriculum.html
@@ -3,65 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About</title>
+  <title>Curriculum</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <header class="header">
     <a href="../index.html" class="logo">Georgios Website</a>
     <nav class="navbar">
-        <a href="../index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="degree.html" class="active">Degree</a>
-        <a href="/topic.html">Topic</a>
-        <a href="contact.html">Contact</a>
-        <a href="curriculum.html">Curriculum</a>
-        <a href="fundamentals.html">Fundamentals</a>
-        <a href="net.html">Net</a>
+      <a href="../index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="degree.html">Degree</a>
+      <a href="topic.html">Topic</a>
+      <a href="contact.html">Contact</a>
+      <a href="curriculum.html" class="active">Curriculum</a>
+      <a href="fundamentals.html">Fundamentals</a>
+      <a href="net.html">Net</a>
     </nav>
-</header>
+  </header>
 
-    <section class="curriculum">
-        <h2>My Curriculum</h2>
-        <h3>Education</h3>
-        <ul>
-            <li><strong>Bachelor of Science in Computer Science</strong> - University of Example (2020 - 2024)</li>
-            <li><strong>High School Diploma</strong> - Example High School (2016 - 2020)</li>
-        </ul>
+  <section class="curriculum">
+    <h2>My Curriculum</h2>
+    <h3>Education</h3>
+    <ul>
+      <li><strong>Bachelor of Science in Computer Science</strong> - University of Example (2020 - 2024)</li>
+      <li><strong>High School Diploma</strong> - Example High School (2016 - 2020)</li>
+    </ul>
 
-        <h3>Work Experience</h3>
+    <h3>Work Experience</h3>
+    <ul>
+      <li><strong>Intern Software Developer</strong> - Example Tech Company (Summer 2023)
         <ul>
-            <li><strong>Intern Software Developer</strong> - Example Tech Company (Summer 2023)
-                <ul>
-                    <li>Developed and maintained web applications using HTML, CSS, and JavaScript.</li>
-                    <li>Collaborated with the development team to design and implement new features.</li>
-                    <li>Assisted in debugging and troubleshooting issues in existing applications.</li>
-                </ul>
-            </li>
-            <li><strong>Freelance Web Developer</strong> (2021 - Present)
-                <ul>
-                    <li>Designed and developed websites for small businesses and personal projects.</li>
-                    <li>Worked with clients to gather requirements and deliver customized solutions.</li>
-                    <li>Utilized various web technologies including HTML, CSS, JavaScript, and PHP.</li>
-                </ul>
-            </li>
+          <li>Developed and maintained web applications using HTML, CSS, and JavaScript.</li>
+          <li>Collaborated with the development team to design and implement new features.</li>
+          <li>Assisted in debugging and troubleshooting issues in existing applications.</li>
         </ul>
+      </li>
+      <li><strong>Freelance Web Developer</strong> (2021 - Present)
+        <ul>
+          <li>Designed and developed websites for small businesses and personal projects.</li>
+          <li>Worked with clients to gather requirements and deliver customized solutions.</li>
+          <li>Utilized various web technologies including HTML, CSS, JavaScript, and PHP.</li>
+        </ul>
+      </li>
+    </ul>
 
-        <h3>Skills</h3>
-        <ul>
-            <li>Proficient in HTML, CSS, JavaScript, and PHP</li>
-            <li>Experience with frameworks such as React and Angular</li>
-            <li>Knowledge of database management systems like MySQL and MongoDB</li>
-            <li>Strong problem-solving and analytical skills</li>
-            <li>Excellent communication and teamwork abilities</li>
-        </ul>
+    <h3>Skills</h3>
+    <ul>
+      <li>Proficient in HTML, CSS, JavaScript, and PHP</li>
+      <li>Experience with frameworks such as React and Angular</li>
+      <li>Knowledge of database management systems like MySQL and MongoDB</li>
+      <li>Strong problem-solving and analytical skills</li>
+      <li>Excellent communication and teamwork abilities</li>
+    </ul>
 
-        <h3>Projects</h3>
-        <ul>
-            <li><strong>Personal Portfolio Website</strong> - A website showcasing my projects and skills.</li>
-            <li><strong>Online Store</strong> - Developed a fully functional e-commerce website for a local business.</li>
-            <li><strong>Blog Platform</strong> - Created a blog platform with user authentication and content management features.</li>
-        </ul>
-    </section>
+    <h3>Projects</h3>
+    <ul>
+      <li><strong>Personal Portfolio Website</strong> - A website showcasing my projects and skills.</li>
+      <li><strong>Online Store</strong> - Developed a fully functional e-commerce website for a local business.</li>
+      <li><strong>Blog Platform</strong> - Created a blog platform with user authentication and content management features.</li>
+    </ul>
+  </section>
 </body>
 </html>
