--- a/main/curriculum.html
+++ b/main/curriculum.html
@@ -7,19 +7,19 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <header class="header">
-    <a href="../index.html" class="logo">Georgios Website</a>
-    <nav class="navbar">
-      <a href="../index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="degree.html">Degree</a>
-      <a href="topic.html">Topic</a>
-      <a href="contact.html">Contact</a>
-      <a href="curriculum.html" class="active">Curriculum</a>
-      <a href="fundamentals.html">Fundamentals</a>
-      <a href="net.html">Net</a>
-    </nav>
-  </header>
+    <header class="header">
+        <a href="/index.html" class="logo">Georgios Website</a>
+        <nav class="navbar">
+          <a href="/index.html">Home</a>
+          <a href="/about.html">About</a>
+          <a href="/degree.html">Degree</a>
+          <a href="/topic.html">Topic</a>
+          <a href="/contact.html">Contact</a>
+          <a href="/curriculum.html" class="active">Curriculum</a>
+          <a href="/fundamentals.html">Fundamentals</a>
+          <a href="/net.html">Net</a>
+        </nav>
+      </header>      
 
   <section class="curriculum">
     <h2>My Curriculum</h2>
