--- a/main/contact.html
+++ b/main/contact.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html" class="logo">Georgios Website</a>
+        <a href="../index.html" class="logo">Georgios Website</a>
         <nav class="navbar">
-          <a href="../index.html">Home</a>
-          <a href="../about.html">About</a>
-          <a href="../degree.html">Degree</a>
-          <a href="../topic.html">Topic</a>
-          <a href="../contact.html">Contact</a>
-          <a href="../curriculum.html" class="active">Curriculum</a>
-          <a href="../fundamentals.html">Fundamentals</a>
-          <a href="../net.html">Net</a>
+            <a href="../index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="degree.html" class="active">Degree</a>
+            <a href="/topic.html">Topic</a>
+            <a href="contact.html">Contact</a>
+            <a href="curriculum.html">Curriculum</a>
+            <a href="fundamentals.html">Fundamentals</a>
+            <a href="net.html">Net</a>
         </nav>
-      </header>
+    </header>
       
 
   <div class="contact-form">
