--- a/main/degree.html
+++ b/main/degree.html
@@ -13,7 +13,7 @@
             <a href="../index.html">Home</a>
             <a href="about.html">About</a>
             <a href="degree.html" class="active">Degree</a>
-            <a href="/topic.html">Topic</a>
+            <a href="../topic.html">Topic</a>
             <a href="contact.html">Contact</a>
             <a href="curriculum.html">Curriculum</a>
             <a href="fundamentals.html">Fundamentals</a>
